--- a/assignments/cnn.ipynb
+++ b/assignments/cnn.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -502,14 +502,14 @@
     }
    ],
    "source": [
-    "y_pred_prob_convolutional = model_convolutional.predict(val_gen)  # Geeft een waarschijnlijkheid per afbeelding\n",
-    "y_true = val_gen.classes  # De echte labels (0 of 1) uit de validatieset\n",
+    "y_pred_prob_convolutional = model_convolutional.predict(val_gen)  # give a prediction for each image\n",
+    "y_true = val_gen.classes  # The true labels (0 or 1)\n",
     "\n",
-    "# Bepaal de ROC-curve\n",
+    "# determine the ROC-curve\n",
     "fpr, tpr, thresholds = roc_curve(y_true, y_pred_prob_convolutional)\n",
     "roc_auc = auc(fpr, tpr)\n",
     " \n",
-    "# Plot de ROC-curve\n",
+    "# Plot the ROC-curve\n",
     "plt.figure()\n",
     "plt.plot(fpr, tpr, color='darkorange', lw=2, label='ROC curve (area = %0.2f)' % roc_auc)\n",
     "plt.plot([0, 1], [0, 1], color='navy', lw=2, linestyle='--')\n",
@@ -520,15 +520,6 @@
     "plt.title('Receiver Operating Characteristic')\n",
     "plt.legend(loc=\"lower right\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 3\n"
    ]
   },
   {
@@ -575,7 +566,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AI_for_MIA",
+   "display_name": "8p361",
    "language": "python",
    "name": "python3"
   },
@@ -589,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
