--- a/assignments/cnn.ipynb
+++ b/assignments/cnn.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,19 +137,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.\n",
-      "WARNING:absl:There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.SGD`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 144000 images belonging to 2 classes.\n",
-      "Found 16000 images belonging to 2 classes.\n"
+     "ename": "NameError",
+     "evalue": "name 'get_pcam_generators' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# get the model\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#model = get_model()\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# get the data generators\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m train_gen, val_gen \u001b[38;5;241m=\u001b[39m \u001b[43mget_pcam_generators\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/nikavredenbregt/Library/CloudStorage/OneDrive-TUEindhoven/TUe/Year 3/Project AI for MIA\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_pcam_generators' is not defined"
      ]
     }
    ],
@@ -347,67 +342,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.SGD` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.SGD`.\n",
-      "WARNING:absl:There is a known slowdown when using v2.11+ Keras optimizers on M1/M2 Macs. Falling back to the legacy Keras optimizer, i.e., `tf.keras.optimizers.legacy.SGD`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-19 16:15:23.271005: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
-      "\t [[{{node Placeholder/_0}}]]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4499/4500 [============================>.] - ETA: 0s - loss: 0.5397 - accuracy: 0.7374"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-19 16:17:22.891804: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
-      "\t [[{{node Placeholder/_0}}]]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Epoch 1: val_loss improved from inf to 0.52632, saving model to my_second_cnn_model_weights.hdf5\n",
-      "4500/4500 [==============================] - 128s 28ms/step - loss: 0.5397 - accuracy: 0.7374 - val_loss: 0.5263 - val_accuracy: 0.7430\n",
-      "Epoch 2/3\n",
-      "4498/4500 [============================>.] - ETA: 0s - loss: 0.5354 - accuracy: 0.7431\n",
-      "Epoch 2: val_loss did not improve from 0.52632\n",
-      "4500/4500 [==============================] - 131s 29ms/step - loss: 0.5354 - accuracy: 0.7431 - val_loss: 0.5906 - val_accuracy: 0.7063\n",
-      "Epoch 3/3\n",
-      "4499/4500 [============================>.] - ETA: 0s - loss: 0.5299 - accuracy: 0.7481\n",
-      "Epoch 3: val_loss did not improve from 0.52632\n",
-      "4500/4500 [==============================] - 153s 34ms/step - loss: 0.5299 - accuracy: 0.7482 - val_loss: 0.5294 - val_accuracy: 0.7409\n"
+     "ename": "NameError",
+     "evalue": "name 'train_gen' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 42\u001b[0m\n\u001b[0;32m     38\u001b[0m callbacks_list_convolutional \u001b[38;5;241m=\u001b[39m [checkpoint_convolutional, tensorboard_convolutional]\n\u001b[0;32m     41\u001b[0m \u001b[38;5;66;03m# train the model\u001b[39;00m\n\u001b[1;32m---> 42\u001b[0m train_steps \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_gen\u001b[49m\u001b[38;5;241m.\u001b[39mn\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39mtrain_gen\u001b[38;5;241m.\u001b[39mbatch_size\n\u001b[0;32m     43\u001b[0m val_steps \u001b[38;5;241m=\u001b[39m val_gen\u001b[38;5;241m.\u001b[39mn\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39mval_gen\u001b[38;5;241m.\u001b[39mbatch_size\n\u001b[0;32m     45\u001b[0m history_convolutional \u001b[38;5;241m=\u001b[39m model_convolutional\u001b[38;5;241m.\u001b[39mfit(train_gen, steps_per_epoch\u001b[38;5;241m=\u001b[39mtrain_steps, \n\u001b[0;32m     46\u001b[0m                     validation_data\u001b[38;5;241m=\u001b[39mval_gen,\n\u001b[0;32m     47\u001b[0m                     validation_steps\u001b[38;5;241m=\u001b[39mval_steps,\n\u001b[0;32m     48\u001b[0m                     epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m,\n\u001b[0;32m     49\u001b[0m                     callbacks\u001b[38;5;241m=\u001b[39mcallbacks_list_convolutional)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_gen' is not defined"
      ]
     }
    ],
    "source": [
     "# Exercise 2\n",
+    "from tensorflow.keras.layers import GlobalAveragePooling2D\n",
     "\n",
     "def get_model_covolutional(kernel_size=(3,3), pool_size=(4,4), first_filters=32, second_filters=64, third_filters=128, fourth_filters=264):\n",
     "\n",
@@ -416,18 +368,12 @@
     "\n",
     "     model_convolutional.add(Conv2D(first_filters, kernel_size, activation = 'relu', padding = 'same', input_shape = (IMAGE_SIZE, IMAGE_SIZE, 3)))\n",
     "     model_convolutional.add(MaxPool2D(pool_size = pool_size))\n",
-    "\n",
-    "    #  model_convolutional.add(Conv2D(second_filters, kernel_size, activation = 'relu', padding = 'same'))\n",
-    "    #  model_convolutional.add(MaxPool2D(pool_size = pool_size))\n",
-    "\n",
-    "    #  model_convolutional.add(Conv2D(third_filters, kernel_size, activation = 'relu', padding = 'same'))\n",
-    "    #  model_convolutional.add(MaxPool2D(pool_size = pool_size))\n",
     "     \n",
-    "    #  model_convolutional.add(Conv2D(fourth_filters, kernel_size, activation = 'relu', padding = 'same'))\n",
-    "    #  model_convolutional.add(MaxPool2D(pool_size = pool_size))\n",
+    "     model_convolutional.add(Conv2D(second_filters, kernel_size, activation='relu', padding='same'))\n",
+    "     model_convolutional.add(MaxPool2D(pool_size=pool_size))\n",
     "\n",
-    "     model_convolutional.add(Flatten())\n",
-    "     model_convolutional.add(Dense(1, activation = 'sigmoid'))\n",
+    "     model_convolutional.add(Conv2D(1, (1,1), activation='sigmoid'))  # 1x1 Conv as output layer\n",
+    "     model_convolutional.add(GlobalAveragePooling2D())  # Pools over entire spatial dimensions\n",
     "\n",
     "     # compile the model\n",
     "     model_convolutional.compile(SGD(learning_rate=0.01, momentum=0.95), loss = 'binary_crossentropy', metrics=['accuracy'])\n",
@@ -437,7 +383,7 @@
     "model_convolutional = get_model_covolutional()\n",
     "\n",
     "# save the model and weights\n",
-    "model_convolutional_name = 'my_second_cnn_model'\n",
+    "model_convolutional_name = 'convolutional_model'\n",
     "model_convolutional_filepath = model_convolutional_name + '.json'\n",
     "weights_filepath_convolutional = model_convolutional_name + '_weights.hdf5'\n",
     "\n",
