Fixing crashing issues

--- a/code/coat_testing.ipynb
+++ b/code/coat_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.layers import Dense, Flatten\n",
-    "from tensorflow.keras.layers import Conv2D, GlobalAveragePooling2D, GlobalAveragePooling1D, DepthwiseConv2D\n",
+    "from tensorflow.keras.layers import Conv2D, GlobalAveragePooling2D, GlobalAveragePooling1D, DepthwiseConv2D, MaxPooling2D\n",
     "from tensorflow.keras.layers import Input\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Flatten\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +157,16 @@
     "    # 2x CNN block\n",
     "    x = inverted_residual_block(inputs, MBConv1_expand, MBConv1_squeeze) \n",
     "    x = inverted_residual_block(x, MBConv2_expand , MBConv2_squeeze)\n",
+    "\n",
+    "    x = Conv2D(32, (3,3), strides=2, padding='same', activation='relu')(x)\n",
+    "    x = MaxPooling2D(pool_size=(2,2))(x)\n",
     "    \n",
     "    # Automatic reshaping\n",
     "    x = Reshape((-1, x.shape[-1]))(x)\n",
     "\n",
     "    # 2x transformer block\n",
-    "    x = transformer_block(x, embed_dim=MBConv2_squeeze, num_heads=num_heads1)\n",
-    "    x = transformer_block(x, embed_dim=MBConv2_squeeze, num_heads=num_heads2)\n",
+    "    x = transformer_block(x, embed_dim=x.shape[-1], num_heads=num_heads1)\n",
+    "    x = transformer_block(x, embed_dim=x.shape[-1], num_heads=num_heads2)\n",
     "    \n",
     "    x = GlobalAveragePooling1D()(x)\n",
     "    outputs = Dense(num_classes, activation=\"sigmoid\")(x)\n",
