--- a/code/testing_trained_models.ipynb
+++ b/code/testing_trained_models.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
    ],
    "source": [
     "# et the filepath where the trained model is saved (should be in the 'metadata' directory with a .keras extension)\n",
-    "model_name='CoAtNet_2MBConv_4x4pool_2ViT_10epochs'\n",
+    "model_name='CoAtNet_2conv_4pool_2ViTdrp.3_drp.3_10e_btc32'\n",
     "model_filepath = dir+'/metadata/'+model_name + '_weights.keras'\n",
     "\n",
     "# load the model from the given filepath\n",
@@ -96,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "500/500 [==============================] - 20s 34ms/step\n",
-      "Accuracy: 0.4978\n",
-      "Recall: 0.5021\n"
+      "500/500 [==============================] - 176s 336ms/step\n",
+      "Accuracy: 0.4930\n",
+      "Recall: 0.5683\n"
      ]
     }
    ],
