--- a/hybrid/super_scheduler.ipynb
+++ b/hybrid/super_scheduler.ipynb
@@ -9188,7 +9188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9257,7 +9257,7 @@
     "    plt.show()\n",
     "\n",
     "# Define the list of file paths\n",
-    "dir_path = os.path.join(os.getcwd(), \"ACCURACY\")\n",
+    "dir_path = os.path.join(os.getcwd(), \"ACCURACY\") #define the location where the data is saved\n",
     "file_paths = [\n",
     "    os.path.join(dir_path, \"double_CNN_50epochs_train.json\"), os.path.join(dir_path, \"double_hybrid_50epochs_train.json\"),\n",
     "    os.path.join(dir_path, \"double_VIT_50epochs_2_train.json\"), os.path.join(dir_path, \"single_hybrid_50epochs_train.json\"),\n",
@@ -9281,7 +9281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9350,7 +9350,7 @@
     "    plt.show()\n",
     "\n",
     "# Define the list of file paths\n",
-    "dir_path = os.path.join(os.getcwd(), \"RECALL\")\n",
+    "dir_path = os.path.join(os.getcwd(), \"RECALL\") #define the location where the data is saved\n",
     "file_paths = [\n",
     "    os.path.join(dir_path, \"double_CNN_50epochs_train.json\"), os.path.join(dir_path, \"double_hybrid_50epochs_train.json\"),\n",
     "    os.path.join(dir_path, \"double_VIT_50epochs_2_train.json\"), os.path.join(dir_path, \"single_hybrid_50epochs_train.json\"),\n",
@@ -9372,7 +9372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9441,7 +9441,7 @@
     "    plt.show()\n",
     "\n",
     "# Define the list of file paths\n",
-    "dir_path = os.path.join(os.getcwd(), \"LOSS\")\n",
+    "dir_path = os.path.join(os.getcwd(), \"LOSS\") #define the location where the data is saved\n",
     "file_paths = [\n",
     "    os.path.join(dir_path, \"double_CNN_50epochs_train.json\"), os.path.join(dir_path, \"double_hybrid_50epochs_train.json\"),\n",
     "    os.path.join(dir_path, \"double_VIT_50epochs_2_train.json\"), os.path.join(dir_path, \"single_hybrid_50epochs_train.json\"),\n",
@@ -9462,7 +9462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9531,7 +9531,7 @@
     "    plt.show()\n",
     "\n",
     "# Define the list of file paths\n",
-    "dir_path = os.path.join(os.getcwd(), \"AUC\")\n",
+    "dir_path = os.path.join(os.getcwd(), \"AUC\") #define the location where the data is saved\n",
     "file_paths = [\n",
     "    os.path.join(dir_path, \"double_CNN_50epochs_train.json\"), os.path.join(dir_path, \"double_hybrid_50epochs_train.json\"),\n",
     "    os.path.join(dir_path, \"double_VIT_50epochs_2_train.json\"), os.path.join(dir_path, \"single_hybrid_50epochs_train.json\"),\n",
