--- a/hybrid/super_scheduler.ipynb
+++ b/hybrid/super_scheduler.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "following cells have been executed with try-except blocks around each line to make sure the kernel just skips to the next section after encountering an error."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -30,6 +37,13 @@
     "    dir=os.getcwd()\n",
     "except Exception as e:\n",
     "    print(f'Error getting current working directory: {e}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train the CNN model"
    ]
   },
   {
@@ -1303,6 +1317,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train the ViT model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -2570,6 +2591,13 @@
     "    loss, accuracy, area_under_curve, recall = evaluate_model_from_file(model_path, val_gen)\n",
     "except Exception as e:\n",
     "    print(f'Error evaluating model: {e}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train the single hybrid model"
    ]
   },
   {
@@ -3843,6 +3871,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train the double hybrid model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -5110,6 +5145,13 @@
     "    loss, accuracy, area_under_curve, recall = evaluate_model_from_file(model_path, val_gen)\n",
     "except Exception as e:\n",
     "    print(f'Error evaluating model: {e}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "plot ROC curves for all models"
    ]
   },
   {
@@ -9183,7 +9225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ACCURACY"
+    "plot validation accuracy over epochs for all models"
    ]
   },
   {
