--- a/deliverables/hybrid/super_scheduler.ipynb
+++ b/deliverables/hybrid/super_scheduler.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "following cells have been executed with try-except blocks around each line to make sure the kernel just skips to the next section after encountering an error."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -30,6 +37,13 @@
     "    dir=os.getcwd()\n",
     "except Exception as e:\n",
     "    print(f'Error getting current working directory: {e}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train the CNN model"
    ]
   },
   {
@@ -1303,6 +1317,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train the ViT model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -2570,6 +2591,13 @@
     "    loss, accuracy, area_under_curve, recall = evaluate_model_from_file(model_path, val_gen)\n",
     "except Exception as e:\n",
     "    print(f'Error evaluating model: {e}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train the single hybrid model"
    ]
   },
   {
@@ -3843,6 +3871,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "train the double hybrid model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -5110,6 +5145,13 @@
     "    loss, accuracy, area_under_curve, recall = evaluate_model_from_file(model_path, val_gen)\n",
     "except Exception as e:\n",
     "    print(f'Error evaluating model: {e}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "plot ROC curves for all models"
    ]
   },
   {
@@ -9183,12 +9225,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ACCURACY"
+    "plot validation accuracy over epochs for all models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9257,7 +9299,7 @@
     "    plt.show()\n",
     "\n",
     "# Define the list of file paths\n",
-    "dir_path = os.path.join(os.getcwd(), \"ACCURACY\")\n",
+    "dir_path = os.path.join(os.getcwd(), \"ACCURACY\") #define the location where the data is saved\n",
     "file_paths = [\n",
     "    os.path.join(dir_path, \"double_CNN_50epochs_train.json\"), os.path.join(dir_path, \"double_hybrid_50epochs_train.json\"),\n",
     "    os.path.join(dir_path, \"double_VIT_50epochs_2_train.json\"), os.path.join(dir_path, \"single_hybrid_50epochs_train.json\"),\n",
@@ -9281,7 +9323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9350,7 +9392,7 @@
     "    plt.show()\n",
     "\n",
     "# Define the list of file paths\n",
-    "dir_path = os.path.join(os.getcwd(), \"RECALL\")\n",
+    "dir_path = os.path.join(os.getcwd(), \"RECALL\") #define the location where the data is saved\n",
     "file_paths = [\n",
     "    os.path.join(dir_path, \"double_CNN_50epochs_train.json\"), os.path.join(dir_path, \"double_hybrid_50epochs_train.json\"),\n",
     "    os.path.join(dir_path, \"double_VIT_50epochs_2_train.json\"), os.path.join(dir_path, \"single_hybrid_50epochs_train.json\"),\n",
@@ -9372,7 +9414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9441,7 +9483,7 @@
     "    plt.show()\n",
     "\n",
     "# Define the list of file paths\n",
-    "dir_path = os.path.join(os.getcwd(), \"LOSS\")\n",
+    "dir_path = os.path.join(os.getcwd(), \"LOSS\") #define the location where the data is saved\n",
     "file_paths = [\n",
     "    os.path.join(dir_path, \"double_CNN_50epochs_train.json\"), os.path.join(dir_path, \"double_hybrid_50epochs_train.json\"),\n",
     "    os.path.join(dir_path, \"double_VIT_50epochs_2_train.json\"), os.path.join(dir_path, \"single_hybrid_50epochs_train.json\"),\n",
@@ -9462,7 +9504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9531,7 +9573,7 @@
     "    plt.show()\n",
     "\n",
     "# Define the list of file paths\n",
-    "dir_path = os.path.join(os.getcwd(), \"AUC\")\n",
+    "dir_path = os.path.join(os.getcwd(), \"AUC\") #define the location where the data is saved\n",
     "file_paths = [\n",
     "    os.path.join(dir_path, \"double_CNN_50epochs_train.json\"), os.path.join(dir_path, \"double_hybrid_50epochs_train.json\"),\n",
     "    os.path.join(dir_path, \"double_VIT_50epochs_2_train.json\"), os.path.join(dir_path, \"single_hybrid_50epochs_train.json\"),\n",
